--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.5'
+    implementation 'io.vertx:vertx-core:3.8.0'
 }
 
 test {
