--- a/backend/gamelogicservice/build.gradle
+++ b/backend/gamelogicservice/build.gradle
@@ -13,6 +13,24 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation "io.vertx:vertx-core:3.9.1"
+    implementation "io.vertx:vertx-sync:3.9.1"
+    implementation "io.vertx:vertx-web:3.9.1"
+    implementation "io.vertx:vertx-web-client:3.9.1"
+
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.5'
+    implementation 'io.vertx:vertx-circuit-breaker:3.9.2'
+
+    implementation(project(':commons'))
+    implementation(project(':backend')) //importing parent
+
+
+}
+
+
+application {
+    mainClass = "org.example.Main"
 }
 
 test {
