--- a/backend/puzzleapigateway/build.gradle
+++ b/backend/puzzleapigateway/build.gradle
@@ -13,8 +13,24 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation "io.vertx:vertx-core:3.9.1"
+    implementation "io.vertx:vertx-sync:3.9.1"
+    implementation "io.vertx:vertx-web:3.9.1"
+    implementation "io.vertx:vertx-web-client:3.9.1"
+
+    compileOnly 'jakarta.websocket:jakarta.websocket-api:1.1.1'
+    implementation 'io.vertx:vertx-circuit-breaker:3.9.2'
+    implementation(project(':commons'))
+    implementation(project(':backend')) //importing parent
+
 }
 
 test {
     useJUnitPlatform()
+}
+
+
+application {
+    mainClass = "org.example.Main"
 }
