--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -12,8 +12,15 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
 
+    implementation "io.vertx:vertx-core:3.9.1"
+    implementation "io.vertx:vertx-sync:3.9.1"
+    implementation "io.vertx:vertx-web:3.9.1"
+    implementation "io.vertx:vertx-web-client:3.9.1"
+
+    implementation(project(':commons'))
+
+}
 test {
     useJUnitPlatform()
 }
