fix errors in loading puzzle images

--- a/backend/puzzleapigateway/build.gradle
+++ b/backend/puzzleapigateway/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'java'
     id 'application'
 }
 
@@ -11,19 +10,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-
-    implementation "io.vertx:vertx-core:3.9.1"
-    implementation "io.vertx:vertx-sync:3.9.1"
-    implementation "io.vertx:vertx-web:3.9.1"
-    implementation "io.vertx:vertx-web-client:3.9.1"
-
-    compileOnly 'jakarta.websocket:jakarta.websocket-api:1.1.1'
-    implementation 'io.vertx:vertx-circuit-breaker:3.9.2'
+    implementation 'io.vertx:vertx-circuit-breaker:3.9.1'
     implementation(project(':commons'))
     implementation(project(':backend')) //importing parent
-
+    implementation 'javax.websocket:javax.websocket-api:1.1'
+    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.18'    //implementation 'jakarta.websocket:jakarta.websocket-api:1.1.1'
 }
 
 test {
@@ -32,5 +23,5 @@ test {
 
 
 application {
-    mainClass = "org.example.Main"
+    mainClass = "org.danielegiulianini.puzzled.backend.gateway.Main"
 }
