--- a/backend/puzzlemanagementservice/build.gradle
+++ b/backend/puzzlemanagementservice/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'java'
     id 'application'
 }
 
@@ -11,22 +10,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-
-    implementation "io.vertx:vertx-core:3.9.1"
-    implementation "io.vertx:vertx-sync:3.9.1"
-    implementation "io.vertx:vertx-web:3.9.1"
-    implementation "io.vertx:vertx-web-client:3.9.1"
-
     implementation(project(':commons'))
     implementation(project(':backend')) //importing parent
-
 }
 
 
 application {
-    mainClass = "org.danielegiulianini.Main"
+    mainClass = "org.danielegiulianini.puzzled.backend.managementservice.Main"
 }
 
 test {
