--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    // Apply plugins to the root project
     id 'java'
 }
 
@@ -9,18 +10,22 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+subprojects {
+    apply plugin: 'java'
 
-    implementation "io.vertx:vertx-core:3.9.1"
-    implementation "io.vertx:vertx-sync:3.9.1"
-    implementation "io.vertx:vertx-web:3.9.1"
-    implementation "io.vertx:vertx-web-client:3.9.1"
+    dependencies {
+        testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.1')
+        testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.1')
 
-    implementation(project(':commons'))
+        implementation("io.vertx:vertx-core:3.9.1")
+        implementation("io.vertx:vertx-sync:3.9.1")
+        implementation("io.vertx:vertx-web:3.9.1")
+        implementation("io.vertx:vertx-web-client:3.9.1")
 
-}
-test {
-    useJUnitPlatform()
+        implementation(project(':commons'))
+    }
+
+    test {
+        useJUnitPlatform()
+    }
 }
