--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -12,13 +12,19 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
     implementation "io.vertx:vertx-core:3.9.1"
     implementation "io.vertx:vertx-sync:3.9.1"
     implementation "io.vertx:vertx-web:3.9.1"
     implementation "io.vertx:vertx-web-client:3.9.1"
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.5'
-    compileOnly 'jakarta.websocket:jakarta.websocket-api:1.1.1'
 
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.4'    //implementation 'jakarta.websocket:jakarta.websocket-api:1.1.1'
+    //implementation "org.java-websocket:Java-WebSocket:1.3.8"
+    //implementation group: 'javax.json', name: 'javax.json-api', version: '1.0'
+    //implementation group: 'org.glassfish.tyrus.bundles', name: 'tyrus-standalone-client', version: '1.9'
+    implementation 'javax.websocket:javax.websocket-api:1.1'
+    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.18'
 }
 
 test {
